# score-vfx-template

./: CMakeLists.txt  README.md  addon.json  init.sh  release.sh  score_addon_my_vfx.cpp  score_addon_my_vfx.hpp  score_addon_qvkrt.cpp  score_addon_qvkrt.hpp
MyVfx/: Executor.cpp  Metadata.hpp  Node.cpp
QVKRT/: Executor.cpp  Executor.hpp  Layer.hpp  Metadata.hpp  Node.cpp  Node.hpp  Process.cpp  Process.hpp
QVKRT/rt/: rt.cpp  rt.hpp
